--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ strings/
 themes/android/
 themes/default/
 themes/exemplar/
-themes/exemplar - testing/
+themes/exemplar - anon/
+themes/exemplar - madrid/
+themes/exemplar - nurver/
 data.pak
 resources.zip
