--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ strings/strings_es.xml
 strings/strings_en.xml
 strings/strings_de.xml
 strings/strings_en_exemplar.xml
+strings/z_strings_en_ex.xml
