--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ strings/strings_en.xml
 strings/strings_de.xml
 strings/strings_en_exemplar.xml
 strings/z_strings_en_ex.xml
+strings/z_strings_en_ex.xml
