Ignore local strings

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ strings/strings_de.xml
 strings/strings_en_exemplar.xml
 strings/z_strings_en_ex.xml
 strings/Unova_Edits_de.xml
+strings/Unova2_Edits_de.xml
+strings/Sinnoh_Edits_de.xml
