--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ sprites/
 themes/android/
 themes/default/
 themes/exemplar/
+themes/archetype/
 data.pak
 resources.zip
 strings/strings_zh.xml
@@ -22,3 +23,17 @@ strings/strings_de.xml
 strings/Unova_Edits_de.xml
 strings/Unova2_Edits_de.xml
 strings/Sinnoh_Edits_de.xml
+strings/.backup/strings_de.xml
+strings/.backup/strings_en.xml
+strings/.backup/strings_en_archetype.xml
+strings/.backup/strings_en_archetype_gba.xml
+strings/.backup/strings_en_archetype_nds_sinnoh.xml
+strings/.backup/strings_en_archetype_nds_unova.xml
+strings/.backup/strings_es.xml
+strings/.backup/strings_fr.xml
+strings/.backup/strings_it.xml
+strings/.backup/strings_ja.xml
+strings/.backup/strings_ko.xml
+strings/.backup/strings_pt-BR.xml
+strings/.backup/strings_zh-Hant.xml
+strings/.backup/strings_zh.xml
