--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,4 @@ themes/default/
 themes/exemplar/
 data.pak
 resources.zip
-strings/strings_zh.xml
-strings/strings_zh-Hant.xml
-strings/strings_pt-BR.xml
-strings/strings_ko.xml
-strings/strings_ja.xml
-strings/strings_it.xml
-strings/strings_fr.xml
-strings/strings_es.xml
-strings/strings_en.xml
-strings/strings_de.xml
-strings/Unova_Edits_de.xml
-strings/Unova2_Edits_de.xml
-strings/Sinnoh_Edits_de.xml
+strings/
